Count for number of invoices by category

--- a/FinanceAPP/Views/Base.lproj/Main.storyboard
+++ b/FinanceAPP/Views/Base.lproj/Main.storyboard
@@ -4988,6 +4988,6 @@ AAJ7RAACe1YAAntZAAJ7XgAAAAAAAAQBAAAAAAAAAEEAAAAAAAAAAAAAAAAAAntgA
     <inferredMetricsTieBreakers>
         <segue reference="Z27-Im-RC9"/>
         <segue reference="Gpl-94-njZ"/>
-        <segue reference="tKb-Eg-tuW"/>
+        <segue reference="my5-Ff-Nhz"/>
     </inferredMetricsTieBreakers>
 </document>
