--- a/FinanceAPP/Views/Base.lproj/Main.storyboard
+++ b/FinanceAPP/Views/Base.lproj/Main.storyboard
@@ -1580,6 +1580,153 @@
             </objects>
             <point key="canvasLocation" x="1064.8" y="-2239.4302848575712"/>
         </scene>
+        <!--Filter View Controller-->
+        <scene sceneID="WL8-oJ-vAa">
+            <objects>
+                <viewController id="GKD-mN-yTW" customClass="FilterViewController" customModule="FinanceAPP" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="m9K-vJ-eFf">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CbR-Jn-CS9">
+                                <rect key="frame" x="27" y="133.5" width="320" height="300"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Filter by.." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EhD-Oc-71j">
+                                        <rect key="frame" x="8" y="18" width="304" height="36"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="26"/>
+                                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BFj-gB-RBN">
+                                        <rect key="frame" x="293" y="-7" width="34" height="34"/>
+                                        <color key="backgroundColor" name="textfield_bg_color"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="34" id="ZIn-3f-uAv"/>
+                                            <constraint firstAttribute="width" constant="34" id="iCR-Ms-XUd"/>
+                                        </constraints>
+                                        <state key="normal" image="close"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <real key="value" value="17"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
+                                                <real key="value" value="8"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="shadowOpacity">
+                                                <real key="value" value="0.40000000000000002"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
+                                                <color key="value" cocoaTouchSystemColor="darkTextColor"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="size" keyPath="shadowOffset">
+                                                <size key="value" width="0.0" height="0.0"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="close:" destination="GKD-mN-yTW" eventType="touchUpInside" id="ndG-Ft-JzA"/>
+                                        </connections>
+                                    </button>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="By value..." textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Szw-Nr-tRu">
+                                        <rect key="frame" x="13" y="144" width="294" height="40"/>
+                                        <color key="backgroundColor" red="0.21983437959999999" green="0.22669082409999999" blue="0.24726015749999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="eKv-P3-0oD"/>
+                                        </constraints>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="19"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation" keyboardAppearance="alert" returnKeyType="done"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dIs-ue-aCc">
+                                        <rect key="frame" x="13" y="84" width="294" height="40"/>
+                                        <color key="backgroundColor" red="0.21983437963043836" green="0.22669082410519695" blue="0.24726015752947272" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="JqZ-uV-Q8I"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="19"/>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <state key="normal" title="By category"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <real key="value" value="5"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="filterCategory:" destination="GKD-mN-yTW" eventType="touchUpInside" id="Udb-fV-xgX"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WCD-jf-k00">
+                                        <rect key="frame" x="48" y="204" width="224" height="40"/>
+                                        <color key="backgroundColor" red="0.055059365324670609" green="0.64516988593309665" blue="0.3406359111475224" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="tFn-KV-EZu"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="23"/>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <state key="normal" title="APPLY"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <real key="value" value="20"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" name="textfield_bg_color"/>
+                                <constraints>
+                                    <constraint firstItem="EhD-Oc-71j" firstAttribute="leading" secondItem="CbR-Jn-CS9" secondAttribute="leadingMargin" id="1ul-MJ-lV7"/>
+                                    <constraint firstItem="WCD-jf-k00" firstAttribute="leading" secondItem="CbR-Jn-CS9" secondAttribute="leadingMargin" constant="40" id="2t2-ft-iIf"/>
+                                    <constraint firstItem="Szw-Nr-tRu" firstAttribute="top" secondItem="dIs-ue-aCc" secondAttribute="bottom" constant="20" id="2vX-3f-RzO"/>
+                                    <constraint firstAttribute="trailing" secondItem="BFj-gB-RBN" secondAttribute="trailing" constant="-7" id="KRd-sO-mFV"/>
+                                    <constraint firstItem="dIs-ue-aCc" firstAttribute="leading" secondItem="CbR-Jn-CS9" secondAttribute="leadingMargin" constant="5" id="VAg-0g-7xN"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="WCD-jf-k00" secondAttribute="trailing" constant="40" id="Yib-el-WZR"/>
+                                    <constraint firstItem="EhD-Oc-71j" firstAttribute="top" secondItem="CbR-Jn-CS9" secondAttribute="topMargin" constant="10" id="ZWJ-Rx-thz"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="EhD-Oc-71j" secondAttribute="trailing" id="ZqM-mh-9Sa"/>
+                                    <constraint firstItem="WCD-jf-k00" firstAttribute="top" secondItem="Szw-Nr-tRu" secondAttribute="bottom" constant="20" id="a7d-3e-uRb"/>
+                                    <constraint firstItem="BFj-gB-RBN" firstAttribute="top" secondItem="CbR-Jn-CS9" secondAttribute="top" constant="-7" id="aO3-kX-AOI"/>
+                                    <constraint firstItem="dIs-ue-aCc" firstAttribute="trailing" secondItem="CbR-Jn-CS9" secondAttribute="trailingMargin" constant="-5" id="fwj-Dy-zLo"/>
+                                    <constraint firstAttribute="width" constant="320" id="hz6-c0-XSt"/>
+                                    <constraint firstItem="Szw-Nr-tRu" firstAttribute="trailing" secondItem="CbR-Jn-CS9" secondAttribute="trailingMargin" constant="-5" id="okk-Cn-f8W"/>
+                                    <constraint firstItem="Szw-Nr-tRu" firstAttribute="leading" secondItem="CbR-Jn-CS9" secondAttribute="leadingMargin" constant="5" id="xR7-TZ-OQ8"/>
+                                    <constraint firstAttribute="height" constant="300" id="z6G-c1-7Q0"/>
+                                    <constraint firstItem="dIs-ue-aCc" firstAttribute="top" secondItem="EhD-Oc-71j" secondAttribute="bottom" constant="30" id="zYr-wm-0b8"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
+                                        <real key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="shadowOpacity">
+                                        <real key="value" value="0.5"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="size" keyPath="shadowOffset">
+                                        <size key="value" width="0.0" height="0.0"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
+                                        <color key="value" cocoaTouchSystemColor="darkTextColor"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.70237585616438358" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="CbR-Jn-CS9" firstAttribute="centerY" secondItem="m9K-vJ-eFf" secondAttribute="centerY" constant="-50" id="JoB-6L-JOg"/>
+                            <constraint firstItem="CbR-Jn-CS9" firstAttribute="centerX" secondItem="m9K-vJ-eFf" secondAttribute="centerX" id="zMj-l8-mgB"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="b7z-aL-Cgb"/>
+                    </view>
+                    <connections>
+                        <outlet property="btCategory" destination="dIs-ue-aCc" id="EvM-Es-eJa"/>
+                        <outlet property="btClose" destination="BFj-gB-RBN" id="34x-qg-0q9"/>
+                        <outlet property="lbModalTitle" destination="EhD-Oc-71j" id="8Sq-SB-Eka"/>
+                        <outlet property="tfValue" destination="Szw-Nr-tRu" id="9SE-qO-Iti"/>
+                        <segue destination="m3N-8a-Ita" kind="show" identifier="filterCategorySegue" id="YJq-GK-Qtm"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cRF-Ho-Wud" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-722.39999999999998" y="-1372.263868065967"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="HuA-Q0-hpd">
             <objects>
@@ -2230,6 +2377,7 @@
         <image name="bill-table" width="128" height="128"/>
         <image name="cancel" width="30" height="30"/>
         <image name="category" width="30" height="30"/>
+        <image name="close" width="24" height="24"/>
         <image name="credit_card" width="30" height="30"/>
         <image name="delete" width="20" height="20"/>
         <image name="edit" width="20" height="20"/>
@@ -4984,10 +5132,13 @@ AAJ7RAACe1YAAntZAAJ7XgAAAAAAAAQBAAAAAAAAAEEAAAAAAAAAAAAAAAAAAntgA
         <namedColor name="textfield_bg_color">
             <color red="0.14100000262260437" green="0.14499999582767487" blue="0.15700000524520874" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <namedColor name="textfield_bg_color">
+            <color red="0.14100000262260437" green="0.14499999582767487" blue="0.15700000524520874" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="Z27-Im-RC9"/>
-        <segue reference="Gpl-94-njZ"/>
-        <segue reference="my5-Ff-Nhz"/>
+        <segue reference="YJq-GK-Qtm"/>
+        <segue reference="tKb-Eg-tuW"/>
     </inferredMetricsTieBreakers>
 </document>
